# autoeval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/autoeval/: __init__.py  llm.py  oai.py  util.py
src/autoeval/tpl/: factuality.txt  judge.txt
test/: core.py  test_core.py
