[project]
name = "autoeval"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "jinja2>=3.1.4",
    "openai>=1.50.2",
    "pydantic>=2.9.2",
]

[project.scripts]
hello = "autoeval:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]

[tool.setuptools.package-data]
"autoeval" = [
  "tpl/*.txt",
]
